# rust_rayweek

./: Cargo.toml
src/: camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  ray.rs  scene.rs  sphere.rs  to_main.rs  tomain.rs  vec3.rs
src/to_main/: camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  material.rs  ray.rs  sphere.rs  vec3.rs
src/tomain/: color.rs  ray.rs
