[package]
name = "rayweek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["bundled"]

[dependencies.nalgebra]
version = "0.31"

[dependencies.rand]
version = "0.8"

[profile.dev.package."*"]
opt-level = 3
incremental = false

[profile.dev]
opt-level = 2
debug = false